--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,30 @@
 name: scholerxpresse
 description: A new Flutter project.
 
+publish_to: 'none' # Remove this line if you want to publish to pub.dev
+
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
-  flutter:
+  provider: ^5.0.0
     sdk: flutter
+  firebase_core: ^2.6.0
+  firebase_auth: ^4.7.1
+  cloud_firestore: ^5.3.1
+  google_sign_in: ^6.0.1
+  flutter_facebook_auth: ^6.0.0
+  provider: ^6.1.5
+  table_calendar: ^3.0.0
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.2
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  assets:
+    - assets/images/ # Example folder for image assets
